--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-thumbnail": "^1.0.0"
+    "react-thumbnail": "^1.0.0",
+    "react-thumbnail-zoom": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
