--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
     "framer-motion": "^1.11.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-native": "^0.62.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-thumbnail": "^1.0.0",
