replace zoom with image-enlarger

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,8 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-gesture-responder": "^2.1.0",
+    "react-image-enlarger": "^1.1.0",
     "react-native": "^0.62.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
