--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mayahopp.github.io/PortfolioWebsite",
+  "homepage": "http://mayahopper.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
