changed homepage url

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.mayahopp.github.io/PortfolioWebsite",
+  "homepage": "https://mayahopper.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
