first wokring on workingbranch

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,8 +14,10 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-gesture-responder": "^2.1.0",
+    "react-grid-gallery": "^0.5.5",
     "react-image-enlarger": "^1.1.0",
     "react-native": "^0.62.2",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sticky-footer": "0.1.0-rc3",
